fix: incorrect cursor position Firefox

--- a/superset-frontend/src/SqlLab/main.less
+++ b/superset-frontend/src/SqlLab/main.less
@@ -208,6 +208,10 @@ div.Workspace {
   .ace_content {
     height: 100%;
   }
+
+  .ace_editor * {
+    font: inherit!important;
+  }
 }
 
 .SqlEditorTabs li {
